# grove-bernardy-bayesian-semantics-tlc

./: .gitmodules  2d.gpl  Makefile  Notes.org  README.md  cabal.project  goodlass-std.gpl  goodlass.gpl  grove-bernardy-bayesian-semantics-tlc.cabal  shell.nix
src/: Notes.org
src/Examples/: Anaphora.hs  Cookies.hs  GoodLass.hs  Guy.hs  HNaloma.hs  HRSA.hs  InformationalPragmatism.hs  Naloma.hs  RSA.hs  Utterances.hs
src/Fragments/: RSA.hs
src/Models/: Field.hs  Gnuplot.hs  Integrals.hs  Optimizer.hs  RN.hs  RSA2d.hs
src/Models/Integrals/: Approx3.hs  Approx4.hs  Approximate.hs  Approximate2.hs  Conversion.hs  Optimizer.hs  Show.hs  Types.hs
src/Models/Logical/: FiniteLogical.hs  Logical.hs
src/TLC/: Distributions.hs  HOAS.hs  RN.hs  Terms.hs
test/: Anaphora.hs  Main.hs  Plots.hs
