cabal-version:       >=1.10
name:                grove-bernardy-bayesian-semantics-tlc
version:             0.1.0.0
synopsis:            Code for `Bayesian semantics in typed λ-calculus'.
description:         An implementation of the framework described in the paper
                     `Bayesian semantics in typed λ-calculus'.
license:             MIT
license-file:        LICENSE
author:              Julian Grove and Jean-Philippe Bernardy
maintainer:          julian.grove@gmail.com
copyright:           2021
build-type:          Simple

library 
  exposed-modules: Examples.Anaphora
                 , Examples.Naloma
                 , Examples.RSA
                 , Models.Integrals
                 , Models.Logical.FiniteLogical
                 , TLC.Distributions
                 , TLC.Terms
  other-modules: FOL.CNF
               , FOL.Connection
               , FOL.FOL
               , FOL.Regularity
               , FOL.Search
               , FOL.Solver
               , FOL.Tableau
               , FOL.Unification
               , Models.Integrals.Approx4
               , Models.Integrals.Conversion
               , Models.Integrals.Optimizer
               , Models.Integrals.Show
               , Models.Integrals.Types
  hs-source-dirs: src
  build-depends: base
               , containers
               , gasp
               , logict
               , MissingH
               , missing-math
               , mtl
               , pretty
  default-language: Haskell2010

executable test
  other-modules: Examples.Anaphora
               , Examples.Naloma
               , Examples.HNaloma
               , Models.Integrals
               , Models.Logical.FiniteLogical
               , TLC.Distributions
               , TLC.Terms
               , FOL.CNF
               , FOL.Connection
               , FOL.FOL
               , FOL.Regularity
               , FOL.Search
               , FOL.Solver
               , FOL.Tableau
               , FOL.Unification
               , Models.Integrals.Approx4
               , Models.Integrals.Conversion
               , Models.Integrals.Optimizer
               , Models.Integrals.Show
               , Models.Integrals.Types
  main-is: Main.hs
  hs-source-dirs: src
                  test
  build-depends: base
               , containers
               , gasp
               , logict
               , MissingH
               , missing-math
               , mtl
               , pretty
  default-language: Haskell2010 