cabal-version:       >=1.10
name:                grove-bernardy-bayesian-semantics-tlc
version:             0.1.0.0
synopsis:            Code for `Bayesian semantics in typed λ-calculus'.
description:         An implementation of the framework described in the paper
                     `Bayesian semantics in typed λ-calculus'.
license:             MIT
license-file:        LICENSE
author:              Julian Grove and Jean-Philippe Bernardy
maintainer:          julian.grove@gmail.com
copyright:           2021
build-type:          Simple

library 
  exposed-modules: Examples.Anaphora
                 , Examples.Naloma
                 -- , Examples.RSA  superseeded by HRSA
                 , Examples.HRSA
                 , Examples.GoodLass
                 , Examples.Guy
                 , Examples.Utterances
                 , Models.Integrals
                 , Models.Logical.FiniteLogical
                 , TLC.Distributions
                 , TLC.Terms
                 , TLC.HOAS
  other-modules: FOL.CNF
               , FOL.Connection
               , FOL.FOL
               , FOL.Regularity
               , FOL.Search
               , FOL.Solver
               , FOL.Tableau
               , FOL.Unification
               , Models.Integrals.Approx4
               , Models.Integrals.Conversion
               , Models.Integrals.Optimizer
               , Models.Integrals.Show
               , Models.Integrals.Types
  hs-source-dirs: src
  build-depends: base
               , containers
               , directory
               , gasp
               , logict
               , MissingH
               , missing-math
               , mtl
               , pretty
  default-language: Haskell2010

executable plots
  main-is: Plots.hs
  hs-source-dirs: test
  build-depends: base
               , containers
               , gasp
               , directory
               , logict
               , MissingH
               , missing-math
               , mtl
               , pretty
               , grove-bernardy-bayesian-semantics-tlc
  default-language: Haskell2010  

executable anaphora
  main-is: Anaphora.hs
  hs-source-dirs: test
  build-depends: base
               , containers
               , gasp
               , directory
               , logict
               , MissingH
               , missing-math
               , mtl
               , pretty
               , grove-bernardy-bayesian-semantics-tlc
  default-language: Haskell2010 